# cookiecutter-fire-cli

./: LICENSE  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: ci.yml
hooks/: README.md  post_gen_project.py
{{cookiecutter.repo_name}}/: .bumpversion.cfg  LICENSE  README.md  dev.md  pyproject.toml  {{cookiecutter.repo_name}}.py
{{cookiecutter.repo_name}}/.githooks/: install.py
{{cookiecutter.repo_name}}/.github/workflows/: ci.yml  deploy.yml  release.yml
{{cookiecutter.repo_name}}/tests/: test_{{cookiecutter.repo_name}}.py
