[tool.poetry]
name = "cookiecutter-fire-cli"
version = "0.1.0"
description = "A cookiecutter template for creating a fire cli python package"
authors = ["Conor Sheehan <conor.sheehan.dev@gmail.com>"]
license = "mit"

[tool.poetry.dependencies]
python = "^3.6"
cookiecutter = "^1.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
